ProTrackDev/force-app/main/default/objects/TR_Project__c/fields/TR_Program__c.field-meta.xml
<CustomField>
    <fullName>TR_Program__c</fullName>
    <description>Program linked to that project</description>
    <label>Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>