ProTrackDev/force-app/main/default/objects/TR_Project__c/fields/TR_Project_Description__c.field-meta.xml
<CustomField>
    <fullName>TR_Project_Description__c</fullName>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>