ProTrackDev/force-app/main/default/objects/TR_Project__c/fields/TR_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>TR_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>